// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Col/> renders without crashing 1`] = `
<div
  className="col"
  style={Object {}}
>
  <div>
    A
  </div>
</div>
`;

exports[`<Col/> renders without crashing 2`] = `
<div
  className="col col_va_center"
  style={Object {}}
>
  <div>
    A
  </div>
</div>
`;
